# searchfetch

./: .gitignore  README.md  eslint.config.js  index.js  package-lock.json  package.json  pyproject.toml  server.py  test_index.test.js  test_templates.py
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
scripts/: ci-check.sh  e2e-node.mjs  e2e-python.py
templates/: crates-package.json  devto.json  docker-hub.json  docs-page.json  docs-rs.json  duckduckgo-search.json  github-issue.json  github-repo.json  gitlab.json  go-pkg.json  google-search.json  javadoc.json  mdn-web-docs.json  npm-package.json  pypi-package.json  raw.json  reddit.json  wikipedia.json  youtube.json
