[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "searchfetch"
version = "3.3.0"
description = "A maximum fault-tolerant, stealth-enabled MCP server for web searching and fetching."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors =[
    { name = "Max" }
]
keywords =["mcp", "search", "fetch", "llm", "ai", "agent", "stealth"]
dependencies =[
    "mcp>=1.28.1",
    "cloakbrowser>=0.4.5",
    "beautifulsoup4>=4.15.0",
    "markdownify>=1.2.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[project.urls]
Homepage = "https://github.com/maxylev/searchfetch"
Repository = "https://github.com/maxylev/searchfetch"

[project.scripts]
mcp-searchfetch = "server:main"
searchfetch = "server:main"

[tool.setuptools]
py-modules =["server"]

[tool.setuptools.data-files]
templates = [
    "templates/github-repo.json",
    "templates/github-issue.json",
    "templates/npm-package.json",
    "templates/pypi-package.json",
    "templates/crates-package.json",
    "templates/google-search.json",
    "templates/duckduckgo-search.json",
    "templates/docs-page.json",
    "templates/docs-rs.json",
    "templates/docker-hub.json",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
